src/assets/main.css
* {
    margin: 0px;
    padding: 0;
    font-family: Helvetica, Arial, sans-serif;
}

button {
    cursor: pointer;
}

html {
    height: 100%;
}

img {
    width: 70px;
    height: 70px;
}

body {
    border: #1b1e23 10px solid;
    min-height: 100%;
    position: relative;
}

header {
    display: flex;
    flex-direction: column;
}

#top-header {
    background: #1b1e23;
    padding: 10px 20px;
    color: #fff;
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
    align-items: center;
}

/*Hardcoding main*/
main {
    order: initial; /*Important!*/
    width: 100%;    /*Important!*/
    padding-bottom: 50px;
}

#title-logo {
    display: flex;
    align-items: center;
}

#user-photo {
    display: flex;
    align-items: center;
}

.title {
    color: #32CD32;
    font-weight: 200;
    padding-right: 30px;
    padding-left: 30px;
    padding-bottom: 10px;
    padding-top: 10px;
}

.std-padding {
    padding: 30px;
}

#barra-nav {
    display: flex;
    align-items: center;
    justify-content: center;
}

#barra-nav a {
    color:#fff;
    text-decoration: none;
    padding: 0 15px;
    transition: 0.4s;
}

#bot-header{
    background: #1b1e23;
    padding-bottom: 10px;
    color: #fff;
    display: flex;
    justify-content: center;
    align-items: center;
}

#center-screen {
    display: flex;
    flex-direction: row;
    /*align-content: stretch;*/ /* check if needs to be removed */
}

aside {
    /*width: 160px;*/
    background: #1b1e23;
    width: 100%;
    flex-shrink: 4;
    display: flex;
    flex-wrap: wrap;
    flex-direction:column;
    justify-content:flex-start;
}

#barra-nav a:hover, #show-menu:hover, #hide-menu:hover {
    color: #32CD32;
}

#show-menu, #hide-menu {
    font-size: 30px;
    cursor: pointer;
    display: none;
    transition: 0.4s;
}

#check-box {
    display: none;
}

footer {
    position: absolute;
    bottom: 0;
    width: 100%;
    height: 50px;
    background: #1b1e23;
    color: white;
    display: flex;
    align-items: center;
    justify-content: space-around;
}

.small-padding {
    padding: 15px;
}

.request-container {
    background:gray;
    padding: 5px;
    margin: 10px;
    border: gray 10px solid;
    border-radius: 20px;
    display: flex;
    flex-direction: column;
    text-align: center;
    justify-content: center;
}

#answer-buttons {
    color: #32CD32;
    margin-top: 1px;
    display: flex;
    flex-direction: row;
    text-align: center;
    justify-content: center;
    align-items: center;
}

.small-button {
    flex-basis: 100%;
    margin-left: 3px;
    margin-right: 3px;
    font-weight: bold;
    background-color: white;
    border: 2px solid white;
    border-radius: 8px;
    cursor: pointer;
    transition: 0.4s;
}

.small-button:hover {
     background-color: rgb(220, 205, 205);
}

#name-request {
    font-weight: bold;
    padding-bottom: 10px;
}

#last-request {
    margin-bottom: 30px;
}

aside {
    padding-top: 10px;
}

/*MEDIA QUERIES*/
@media(max-width: 768px) {
    #show-menu, #hide-menu {
        display: block;
    }

    #barra-nav a {
        display: block;
        padding: 15px;
    }

    #barra-nav {
        display: block;
        position: fixed;
        background: #1b1e23;
        height: 100vh;
        right: -100%;
        width: 100%;
        top: 0;
        padding: 100px 0px;
        z-index: 100;
        text-align: center;
        transition: 0.5s;
    }


    #check-box:checked ~ #barra-nav {
        right: 0;
    }

    #center-screen {
        display: flex;
        flex-direction: column;
        align-content: stretch;
        justify-content:center;
        align-items: center;
    }

    #top-header {
        justify-content: space-around;
    }

    footer {
        border-top: white 1px solid;
    }

    .request-container {
        margin-left: 20%;
        margin-right: 20%;
        border-radius: 15px;
    }
}

